samples/_failures_safe/1761653781_1eb65e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b80c07a2.c: In function ‘main’:
./samples/SAFE/__tmp_b80c07a2.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_b80c07a2.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b80c07a2.c:152:17: error: expected declaration or statement at end of input
